<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/addWordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterWordPlaceholder"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addBtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/averageWordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/averageWordLabel"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/averageWordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/averagePlaceholderValue"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/medianWordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:enabled="false"
            android:inputType="none"
            android:text="@string/medianWordLabel"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/medianWordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/averagePlaceholderValue"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewBtn" />

    <NumberPicker
        android:id="@+id/wordPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>